--- a/style.css
+++ b/style.css
@@ -18,12 +18,30 @@
   background-color: var(--bg-clr-navi-b);
 }
 
+.bg-clr-splitter {
+  height: 100%;
+  background: linear-gradient(
+    180deg,
+    var(--bg-clr-prpl) 70%,
+    var(--bg-clr-white) 30%
+  );
+}
+
+.h-150 {
+  height: 150%;
+}
+
 .h-85 {
   height: 85vh;
 }
-
+.h-30 {
+  height: 30vh;
+}
 .w-15 {
   width: 15%;
+}
+.w-20 {
+  width: 20%;
 }
 .w-55 {
   width: 55%;
@@ -41,6 +59,9 @@
 }
 .spacing-a-4rem {
   padding: 4rem;
+}
+.spacing-mt-50rem {
+  margin-top: 50%;
 }
 /* spacing-all-over */
 
@@ -62,9 +83,18 @@
 }
 /* spacing-top*/
 
-.btn {
-  border: 0.1rem solid var(--txt-clr-purple);
-  border-radius: 0.6rem;
+.my-btn {
+  border: 2px solid var(--bg-clr-prpl);
+  background-color: white;
+  border-radius: 30px;
+  padding: 12px 40px;
+  transition: 400ms;
+}
+
+.my-btn:hover {
+  cursor: pointer;
+  background-color: var(--bg-clr-prpl);
+  color: var(--txt-clr-white);
 }
 
 .a-txt-regular {
@@ -114,6 +144,21 @@ h4 {
   color: var(--txt-clr-navi-b);
 }
 
-.spacing-t-50rem {
-  padding-top: 50rem;
+.position_ {
+  top: 0%;
+  right: 0%;
+}
+
+.bg-img {
+  opacity: 1;
+}
+
+.bg-txt {
+  opacity: 0;
+}
+
+.bg-img:hover {
+  cursor: pointer;
+  opacity: 0;
+  transition: 400ms ease;
 }
